--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.16",
     "firebase": "^12.5.0",
     "lucide-react": "^0.552.0",
+    "motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
@@ -20,7 +21,8 @@
     "react-router-dom": "^7.9.5",
     "stats.js": "^0.17.0",
     "tailwindcss": "^4.1.16",
-    "three": "^0.181.0"
+    "three": "^0.181.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
