--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^7.9.5",
     "react-toastify": "^11.0.5",
     "stats.js": "^0.17.0",
+    "sweetalert2": "^11.26.3",
     "tailwindcss": "^4.1.16",
     "three": "^0.181.0",
     "uuid": "^13.0.0"
