added sider in hero section

--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.9.5",
     "react-router-dom": "^7.9.5",
+    "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^11.0.5",
     "stats.js": "^0.17.0",
     "sweetalert2": "^11.26.3",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.16",
     "three": "^0.181.0",
     "uuid": "^13.0.0"
